[gd_scene load_steps=3 format=3 uid="uid://bprt5jmuwcihx"]

[ext_resource type="Script" uid="uid://dmoxrpi5e2hec" path="res://scripts/level_select.gd" id="1_t5gxd"]
[ext_resource type="PackedScene" uid="uid://dtnepwc7kcwx1" path="res://scenes/UI/level_preview.tscn" id="2_4ek2u"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
script = ExtResource("1_t5gxd")

[node name="ButtonGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 10.0
offset_top = 29.0
offset_right = 10.0
offset_bottom = 29.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 5

[node name="LevelPreview" parent="." instance=ExtResource("2_4ek2u")]
offset_left = 309.0
offset_top = 29.0
offset_right = 309.0
offset_bottom = 29.0
